hphp/hack/test/typecheck/as_expression/invalid_hint_class_with_generics.php.like_types.exp
File "invalid_hint_class_with_generics.php", line 6, characters 9-14:
Invalid "as" expression hint (Typing[4195])
File "invalid_hint_class_with_generics.php", line 6, characters 9-14:
The "as" operator cannot be used with a type with an erased generic type argument, except in a like cast when the corresponding type parameter is covariant
